--- a/package.json
+++ b/package.json
@@ -20,10 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.8.2",
+    "connect-redis": "^8.1.0",
+    "cookie-parser": "^1.4.7",
+    "express-session": "^1.18.1",
+    "graphql": "^16.11.0",
+    "ioredis": "^5.6.1",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
